bug of the white space  with a viewport of  small width fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@ body{
     padding: 0;
     font-family: "Lato", sans-serif;
 }
+html,body{
+    overflow-x: hidden;
+}
 /*----------------Navigation bar------------------*/
 header{
     margin: 0 auto;
